actually working big pretrain

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -628,7 +628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dataset.shape"
+    "base_dataset.shape if MAKE_MLM_NSP_DATASET else None"
    ]
   },
   {
@@ -661,12 +661,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%sh\n",
-    "aws s3 ls s3://mtg-research"
+    "# %%sh\n",
+    "# aws s3 ls s3://mtg-research"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if LOAD_DATASET_FROM_FILE:\n",
+    "    dataset = datasets.load_from_disk('mtg-mlm-nsp-dataset')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['attention_mask', 'id', 'input_ids', 'labels', 'name_a', 'name_b', 'next_sentence_label', 'rec_set_type', 'text_a', 'text_b', 'token_type_ids'],\n",
+       "        num_rows: 24588302\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['attention_mask', 'id', 'input_ids', 'labels', 'name_a', 'name_b', 'next_sentence_label', 'rec_set_type', 'text_a', 'text_b', 'token_type_ids'],\n",
+       "        num_rows: 1311228\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['attention_mask', 'id', 'input_ids', 'labels', 'name_a', 'name_b', 'next_sentence_label', 'rec_set_type', 'text_a', 'text_b', 'token_type_ids'],\n",
+       "        num_rows: 979413\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset if LOAD_DATASET_FROM_FILE else None"
    ]
   },
   {
@@ -729,7 +772,7 @@
     "if DO_PRE_TRAINING:\n",
     "    config = BertConfig(vocab_size=VOCAB_SIZE)\n",
     "    model = BertForPreTraining(config=config)\n",
-    "    print(f'{model.num_parameters():,}')"
+    "    print(f'number of params in model: {model.num_parameters():,}')"
    ]
   },
   {
@@ -746,8 +789,8 @@
     "        train_dataset = dataset['train'].select(range(80))\n",
     "        eval_dataset = dataset['validation'].select(range(80))\n",
     "    else:\n",
-    "        TRAIN_BATCH = 36\n",
-    "        EVAL_BATCH = 36\n",
+    "        TRAIN_BATCH = 24\n",
+    "        EVAL_BATCH = 24\n",
     "        LOGGING_STEPS = 250\n",
     "        train_dataset = dataset['train']\n",
     "        eval_dataset = dataset['validation']\n",
@@ -802,7 +845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(train_dataset) if DO_PRE_TRAINING else None"
+    "local_model_dir = 'mtg-language-test-small' if DO_SMALL_PRETRAIN_TEST else MODEL_NAME"
    ]
   },
   {
@@ -811,7 +854,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(eval_dataset) if DO_PRE_TRAINING else None"
+    "if DO_PRE_TRAINING:\n",
+    "    trainer.save_model(local_model_dir)"
    ]
   },
   {
@@ -820,7 +864,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.save_model('mtg-language-test-small') if DO_PRE_TRAINING else None"
+    "# trainer.evaluate(train_dataset) if DO_PRE_TRAINING else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.evaluate(test_dataset) if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -831,7 +884,7 @@
    "source": [
     "fill_mask = pipeline(\n",
     "    'fill-mask',\n",
-    "    model='./mtg-language-test-small',\n",
+    "    model=local_model_dir,\n",
     "    tokenizer=tokenizer) if DO_PRE_TRAINING else None"
    ]
   },
@@ -841,7 +894,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset['validation'][0]['text_a'] if DO_PRE_TRAINING else None"
+    "# # this is to get the text string we mask below\n",
+    "# dataset['validation'][0]['text_a'] if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -850,6 +904,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# easy: legendary [MASK] -- vampire knight\n",
+    "fill_mask('{3}{w}{b} legendary [MASK] — vampire knight 4/4: vigilance, lifelink {t}, pay 7 life: destroy target nonland permanent. activate this ability only during your turn.') if DO_PRE_TRAINING else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# harder: destroy target nonland [MASK] (permanent)\n",
     "fill_mask('{3}{w}{b} legendary creature — vampire knight 4/4: vigilance, lifelink {t}, pay 7 life: destroy target nonland [MASK]. activate this ability only during your turn.') if DO_PRE_TRAINING else None"
    ]
   },
