a lot of changes

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -30,6 +30,7 @@
     "from transformers import (BertConfig,\n",
     "                          BertForPreTraining,\n",
     "                          BertTokenizerFast,\n",
+    "                          EarlyStoppingCallback,\n",
     "                          Trainer,\n",
     "                          TrainingArguments,\n",
     "                          pipeline, )\n",
@@ -43,20 +44,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IS_LOCAL_LAPTOP = False\n",
-    "TRAIN_TOKENIZER = False\n",
+    "IS_LOCAL_LAPTOP = True\n",
+    "TRAIN_TOKENIZER = True\n",
     "MAKE_MLM_NSP_DATASET_INPUTS = False\n",
     "MAKE_MLM_NSP_DATASET = True\n",
-    "DO_CHUNKED_DATASET_BUILDING = True\n",
-    "SAVE_DATASET_TO_FILE = True\n",
+    "DO_CHUNKED_DATASET_BUILDING = False\n",
+    "SAVE_DATASET_TO_FILE = False\n",
     "LOAD_DATASET_FROM_FILE = False\n",
-    "DO_PRE_TRAINING = False\n",
-    "DO_SMALL_PRETRAIN_TEST = False\n",
+    "DO_PRE_TRAINING = True\n",
+    "DO_SMALL_PRETRAIN_TEST = True\n",
     "\n",
     "# whether or not we cap the number of card pairs, or we choose or use\n",
     "# all possible pairs\n",
     "# NUM_MAX_PAIRS = None\n",
-    "NUM_MAX_PAIRS = 500"
+    "# NUM_MAX_PAIRS = 500\n",
+    "NUM_MAX_PAIRS = 1"
    ]
   },
   {
@@ -69,7 +71,7 @@
     "    assert IS_LOCAL_LAPTOP\n",
     "    \n",
     "if DO_CHUNKED_DATASET_BUILDING:\n",
-    "    assert NUM_MAX_PAIRS is not None, \"this is like 2 TB of data\"",
+    "    assert NUM_MAX_PAIRS is not None, \"this is like 2 TB of data\"\n",
     "\n",
     "if MAKE_MLM_NSP_DATASET_INPUTS:\n",
     "    assert IS_LOCAL_LAPTOP"
@@ -727,8 +729,8 @@
     "\n",
     "+ build a *real* dataset\n",
     "    + ~~write chunked dataset processer to leverage multiple cpus~~\n",
-    "    + move to a **CPU** box -- not a GPU box. this dataset creation is done on the CPU.\n",
-    "    + set up cpu box\n",
+    "    + ~~move to a **CPU** box -- not a GPU box. this dataset creation is done on the CPU.~~\n",
+    "    + ~~set up cpu box~~\n",
     "        + `ssh-keygen -t ed25519 -C \"r.zach.lamberty@gmail.com\"`\n",
     "        + `cat ~/.ssh/id_ed25519.pub`\n",
     "        + add to github [here](https://github.com/settings/keys)\n",
@@ -736,21 +738,36 @@
     "        + `source activate ...`\n",
     "        + `pip install datasets transformers`\n",
     "        + `jupyter notebook --no-browser --ip=0.0.0.0`\n",
-    "    + locally\n",
+    "    + ~~locally~~\n",
     "        + `ssh -NfL 9999:localhost:8888 rzlcpu`\n",
     "        + https://localhost:9999\n",
     "        + `scp -r mtg-language rzlcpu:~/mtg-research/bert-edh-pair-prediction/mtg-language`\n",
     "        + `scp -r mtg-language-data rzlcpu:~/mtg-research/bert-edh-pair-prediction/mtg-language-data`\n",
-    "    + in the jupyter notebook, update the flags at the top\n",
+    "    + ~~in the jupyter notebook, update the flags at the top~~\n",
     "        + `True`:\n",
     "            + `MAKE_MLM_NSP_DATASET`\n",
     "            + `DO_CHUNKED_DATASET_BUILDING`\n",
     "            + `SAVE_DATASET_TO_FILE`\n",
     "        + all others `False`\n",
-    "    + save this dataset and copy it down\n",
+    "    + ~~save this dataset and copy it down~~\n",
     "+ train\n",
-    "    + move to GPU (upload the saved dataset\n",
-    "    + **add early stopping**\n",
+    "    + move to GPU\n",
+    "    + set up gpu box\n",
+    "        + try a `p2.8xlarge` instead of the p3\n",
+    "        + hard drive should be at least 500 gb\n",
+    "        + attach the read s3 iam role\n",
+    "        + `ssh-keygen -t ed25519 -C \"r.zach.lamberty@gmail.com\"`\n",
+    "        + `cat ~/.ssh/id_ed25519.pub`\n",
+    "        + add to github [here](https://github.com/settings/keys)\n",
+    "        + `git clone git@github.com:RZachLamberty/mtg-research.git`\n",
+    "        + in a new terminal, kick this off asap:\n",
+    "            + `aws s3 sync s3://mtg-research/bert-edh-pair-prediction/mtg-mlm-nsp-dataset mtg-mlm-nsp-dataset`\n",
+    "        + go back to the original terminal\n",
+    "        + `screen -S j`\n",
+    "        + `source activate ...`\n",
+    "        + `pip install datasets transformers`\n",
+    "        + `jupyter notebook --no-browser --ip=0.0.0.0`\n",
+    "        + `cd ~/mtg-research/bert-edh-pair-prediction`\n",
     "    + run it"
    ]
   },
@@ -799,6 +816,12 @@
     "    \n",
     "    # # use this format to pick up from an aborted run\n",
     "    # model = BertForPreTraining.from_pretrained(f'./{output_dir}/checkpoint-5750')\n",
+    "    \n",
+    "    # this callback just says that if there are 8 consecutive (measured every\n",
+    "    # eval_steps = ogging_steps steps) eval losses greater than the one at t0,\n",
+    "    # kill the job\n",
+    "    esc = EarlyStoppingCallback(early_stopping_patience=8,\n",
+    "                                early_stopping_threshold=0.0)\n",
     "\n",
     "    training_args = TrainingArguments(\n",
     "        output_dir=output_dir,                    # output directory\n",
@@ -826,6 +849,7 @@
     "        args=training_args,           # training arguments, defined above\n",
     "        train_dataset=train_dataset,  # training dataset\n",
     "        eval_dataset=eval_dataset,    # evaluation dataset\n",
+    "        callbacks=[esc],\n",
     "    )"
    ]
   },
@@ -942,7 +966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
