[pair prediction]: adding early stopping and using the right label convention

--- a/bert-edh-pair-prediction/edh-pair-prediction.ipynb
+++ b/bert-edh-pair-prediction/edh-pair-prediction.ipynb
@@ -48,6 +48,7 @@
     "from transformers import (BertConfig, BertTokenizerFast,\n",
     "                          BertForNextSentencePrediction,\n",
     "                          DataCollatorWithPadding,\n",
+    "                          EarlyStoppingCallback,\n",
     "                          PreTrainedModel, PreTrainedTokenizerFast,\n",
     "                          Trainer, TrainingArguments, )"
    ]
@@ -87,8 +88,8 @@
    "source": [
     "CARD_SAMPLER_VERSION = 2\n",
     "\n",
-    "IS_LOCAL_LAPTOP = True\n",
-    "BUILD_TTV_DATASETS = True\n",
+    "IS_LOCAL_LAPTOP = False\n",
+    "BUILD_TTV_DATASETS = False\n",
     "#USE_CARD_SAMPLER_V2 = False\n",
     "DO_FINE_TUNING = False\n",
     "USE_FINE_TUNED_MODEL = False\n",
@@ -250,24 +251,6 @@
     "             .first())\n",
     "    \n",
     "    cards.index = cards.index.str.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cards.index.str.lower()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cards.head()"
    ]
   },
   {
@@ -773,6 +756,12 @@
     "    \n",
     "    # # use this format to pick up from an aborted run\n",
     "    # model = BertForNextSentencePrediction.from_pretrained('./results_v2/checkpoint-5750')\n",
+    "    \n",
+    "    # this callback just says that if there are 8 consecutive (measured every\n",
+    "    # eval_steps = ogging_steps steps) eval losses greater than the one at t0,\n",
+    "    # kill the job\n",
+    "    esc = EarlyStoppingCallback(early_stopping_patience=8,\n",
+    "                                early_stopping_threshold=0.0)\n",
     "\n",
     "    training_args = TrainingArguments(\n",
     "        output_dir=output_dir,                    # output directory\n",
@@ -783,7 +772,7 @@
     "        weight_decay=0.01,                        # strength of weight decay\n",
     "        logging_dir='./logs',                     # directory for storing logs\n",
     "        # my custom ones\n",
-    "        logging_steps=250,\n",
+    "        logging_steps=50,\n",
     "        overwrite_output_dir=True,\n",
     "        evaluation_strategy='steps',\n",
     "        logging_first_step=True,\n",
@@ -800,7 +789,8 @@
     "        model=model,                              # the instantiated 🤗 Transformers model to be trained\n",
     "        args=training_args,                       # training arguments, defined above\n",
     "        train_dataset=dataset['train'],           # training dataset\n",
-    "        eval_dataset=dataset['val']#.select(range(EVAL_BATCH * 1_000)),  # evaluation dataset\n",
+    "        eval_dataset=dataset['val'], #.select(range(EVAL_BATCH * 1_000)),  # evaluation dataset\n",
+    "        callbacks=[esc],\n",
     "    )"
    ]
   },
@@ -1054,7 +1044,7 @@
     "MAX_LENGTH = 300\n",
     "\n",
     "if CHECK_FINE_TUNED_MODEL_RESULTS:\n",
-    "    split_types = ['val', 'test', 'train']\n",
+    "    split_types = ['val', 'test']\n",
     "    \n",
     "    dataset = (load_dataset('csv',\n",
     "                            data_files={split_type: glob(os.path.join(data_dir, split_type, '*.csv'))\n",
@@ -1346,7 +1336,7 @@
     "\n",
     "        probs = softmax(p.predictions, axis=1)\n",
     "\n",
-    "        z = pd.DataFrame({'p1': probs[:, 1],\n",
+    "        z = pd.DataFrame({'p0': probs[:, 0],\n",
     "                          'y_pred': probs.argmax(axis=1),\n",
     "                          'name_b': ds_to_check[deck_name]['name_b'],\n",
     "                          'text_b': ds_to_check[deck_name]['text_b']})\n",
@@ -1354,7 +1344,7 @@
     "\n",
     "        recs = (z\n",
     "                .groupby(['name_b', 'text_b'])\n",
-    "                .p1\n",
+    "                .p0\n",
     "                .median()\n",
     "                .sort_values(ascending=False)\n",
     "                .reset_index())\n",
@@ -1382,18 +1372,18 @@
     "\n",
     "    for deck_name in deck_names:\n",
     "        z_now = (pd.read_parquet(f\"{deck_name}.parquet\")\n",
-    "                 .rename(columns={'p1': f\"p1_{deck_name}\"})\n",
+    "                 .rename(columns={'p0': f\"p0_{deck_name}\"})\n",
     "                 .drop(columns=['text_b'])\n",
     "                 .set_index('name_b'))\n",
     "        if z is None:\n",
     "            z = z_now\n",
     "        else:\n",
-    "            z = z.join(z_now[[f'p1_{deck_name}']],\n",
+    "            z = z.join(z_now[[f'p0_{deck_name}']],\n",
     "                       how='outer')\n",
     "\n",
     "    z = z.join(card_text)\n",
     "    \n",
-    "    p_cols = [f\"p1_{deck_name}\" for deck_name in deck_names]\n",
+    "    p_cols = [f\"p0_{deck_name}\" for deck_name in deck_names]\n",
     "\n",
     "    z.loc[:, 'deckcol'] = z[p_cols].idxmax(axis=1)\n",
     "\n",
@@ -1487,7 +1477,7 @@
     "\n",
     "def defining_cards(n=5):\n",
     "    top_n_candidates = {deck_col: set(z\n",
-    "                                      .sort_values(by=f\"p1_{deck_col}\", ascending=False)\n",
+    "                                      .sort_values(by=f\"p0_{deck_col}\", ascending=False)\n",
     "                                      .head(n)\n",
     "                                      .index\n",
     "                                      .values)\n",
@@ -2012,7 +2002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
