[language modelling]: working v1

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -44,21 +44,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IS_LOCAL_LAPTOP = True\n",
-    "TRAIN_TOKENIZER = True\n",
+    "IS_LOCAL_LAPTOP = False\n",
+    "TRAIN_TOKENIZER = False\n",
     "MAKE_MLM_NSP_DATASET_INPUTS = False\n",
-    "MAKE_MLM_NSP_DATASET = True\n",
+    "MAKE_MLM_NSP_DATASET = False\n",
     "DO_CHUNKED_DATASET_BUILDING = False\n",
     "SAVE_DATASET_TO_FILE = False\n",
-    "LOAD_DATASET_FROM_FILE = False\n",
+    "LOAD_DATASET_FROM_FILE = True\n",
     "DO_PRE_TRAINING = True\n",
-    "DO_SMALL_PRETRAIN_TEST = True\n",
+    "DO_SMALL_PRETRAIN_TEST = False\n",
     "\n",
     "# whether or not we cap the number of card pairs, or we choose or use\n",
     "# all possible pairs\n",
     "# NUM_MAX_PAIRS = None\n",
-    "# NUM_MAX_PAIRS = 500\n",
-    "NUM_MAX_PAIRS = 1"
+    "NUM_MAX_PAIRS = 500\n",
+    "# NUM_MAX_PAIRS = 1"
    ]
   },
   {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,35 +683,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['attention_mask', 'id', 'input_ids', 'labels', 'name_a', 'name_b', 'next_sentence_label', 'rec_set_type', 'text_a', 'text_b', 'token_type_ids'],\n",
-       "        num_rows: 24588302\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['attention_mask', 'id', 'input_ids', 'labels', 'name_a', 'name_b', 'next_sentence_label', 'rec_set_type', 'text_a', 'text_b', 'token_type_ids'],\n",
-       "        num_rows: 1311228\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['attention_mask', 'id', 'input_ids', 'labels', 'name_a', 'name_b', 'next_sentence_label', 'rec_set_type', 'text_a', 'text_b', 'token_type_ids'],\n",
-       "        num_rows: 979413\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset if LOAD_DATASET_FROM_FILE else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# double check the next sentence labels!\n",
+    "import pandas as pd\n",
+    "\n",
+    "if LOAD_DATASET_FROM_FILE:\n",
+    "    z = dataset['train'][:10]\n",
+    "\n",
+    "(pd.DataFrame({k: z[k]\n",
+    "               for k in ['name_a', 'name_b', 'next_sentence_label', 'rec_set_type']})\n",
+    " if LOAD_DATASET_FROM FILE\n",
+    " else None)"
    ]
   },
   {
@@ -806,11 +800,23 @@
     "        train_dataset = dataset['train'].select(range(80))\n",
     "        eval_dataset = dataset['validation'].select(range(80))\n",
     "    else:\n",
-    "        TRAIN_BATCH = 24\n",
-    "        EVAL_BATCH = 24\n",
-    "        LOGGING_STEPS = 250\n",
+    "        TRAIN_BATCH = 51\n",
+    "        EVAL_BATCH = 186\n",
+    "        LOGGING_STEPS = 50\n",
     "        train_dataset = dataset['train']\n",
-    "        eval_dataset = dataset['validation']\n",
+    "        #eval_dataset = dataset['validation']\n",
+    "        \n",
+    "        # every 100th record, then cut down to an exact batch\n",
+    "        # size multiple, caculated as:\n",
+    "        #   # divmod(dataset['validation'].num_rows // 10, 186)[0] * 186\n",
+    "        eval_dataset = (dataset['validation']\n",
+    "                        .filter(lambda example, indice: indice % 10 == 0,\n",
+    "                                with_indices=True)\n",
+    "                        .filter(lambda example, indice: indice < 97_836,\n",
+    "                                with_indices=True))\n",
+    "        \n",
+    "        assert eval_dataset.num_rows % EVAL_BATCH == 0\n",
+    "        print(eval_dataset.num_rows)\n",
     "\n",
     "    output_dir = './mtg-language-results-v1'\n",
     "    \n",
@@ -856,7 +862,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "if DO_PRE_TRAINING:\n",
@@ -888,7 +896,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trainer.evaluate(train_dataset) if DO_PRE_TRAINING else None"
+    "if DO_PRE_TRAINING:\n",
+    "    evals = {}\n",
+    "    for split in ['test', 'validation']:\n",
+    "        evals[split] = trainer.evaluate(dataset[split])\n",
+    "\n",
+    "evals if DO_PRE_TRAINING else None"
    ]
   },
   {
@@ -897,7 +910,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.evaluate(test_dataset) if DO_PRE_TRAINING else None"
+    "if DO_PRE_TRAINING and not DO_CHUNKED_DATASET_BUILDING:\n",
+    "    tokenizer = BertTokenizerFast.from_pretrained(MODEL_NAME)"
    ]
   },
   {
@@ -966,7 +980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
