[pair prediction] more changes to handle the proper next sentence labelling

--- a/bert-edh-pair-prediction/edh-pair-prediction.ipynb
+++ b/bert-edh-pair-prediction/edh-pair-prediction.ipynb
@@ -1121,7 +1121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z.head()"
+    "z.head() if CHECK_FINE_TUNED_MODEL_RESULTS else None"
    ]
   },
   {
@@ -1367,7 +1367,7 @@
     "    z = None\n",
     "\n",
     "    for deck_name in deck_names:\n",
-    "        z_now = (pd.read_parquet(f\"{deck_name}.parquet\")\n",
+    "        z_now = (pd.read_parquet(f\"{deck_name}{version_str}.parquet\")\n",
     "                 .rename(columns={'p0': f\"p0_{deck_name}\"})\n",
     "                 .drop(columns=['text_b'])\n",
     "                 .set_index('name_b'))\n",
@@ -1381,9 +1381,42 @@
     "    \n",
     "    p_cols = [f\"p0_{deck_name}\" for deck_name in deck_names]\n",
     "\n",
-    "    z.loc[:, 'deckcol'] = z[p_cols].idxmax(axis=1)\n",
+    "    z.loc[:, 'deckcol'] = z[p_cols].idxmin(axis=1)\n",
     "\n",
     "z.head() if CHECK_DECK_RECOMMENDATIONS else None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ugh fuck did random sampling just cause this to predict in\n",
+    "# the order of their popularity generally? did it learn nothing \n",
+    "# about card-card interactions? ughhhhhhh goddamn\n",
+    "edhrec_cards.name.value_counts().head(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z.sort_values(by='p0_esper_blink').head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z_ip = z[z.deckcol == 'p0_esper_blink'].copy()\n",
+    "z_ip.loc[:, 'specialness'] = z_ip[p_cols].max(axis=1) - z_ip['p0_esper_blink']\n",
+    "\n",
+    "z_ip.head()"
    ]
   },
   {
@@ -1395,15 +1428,13 @@
    "outputs": [],
    "source": [
     "def foo(deck_name):\n",
-    "    z_ip = (z\n",
-    "            [z.deckcol == deck_name]\n",
-    "            .sort_values(by=deck_name, ascending=False))\n",
+    "    z_ip = z[z.deckcol == deck_name].copy()\n",
     "\n",
-    "    z_ip.loc[:, 'over_median'] = z_ip[deck_name] - z_ip[p_cols].min(axis=1)\n",
+    "    z_ip.loc[:, 'specialness'] = z_ip[p_cols].max(axis=1) - z_ip[deck_name]\n",
     "\n",
-    "    z_ip.sort_values(by=deck_name, ascending=False, inplace=True)\n",
+    "    z_ip.sort_values(by=deck_name, inplace=True)\n",
     "\n",
-    "    return z_ip[z_ip.over_median > 0.2].head(10)"
+    "    return z_ip[z_ip.specialness > 0.2].head(10)"
    ]
   },
   {
@@ -1412,7 +1443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foo('p1_esper_blink') if CHECK_DECK_RECOMMENDATIONS else None"
+    "foo('p0_esper_blink') if CHECK_DECK_RECOMMENDATIONS else None"
    ]
   },
   {
@@ -1421,7 +1452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foo('p1_goblins') if CHECK_DECK_RECOMMENDATIONS else None"
+    "foo('p0_goblins') if CHECK_DECK_RECOMMENDATIONS else None"
    ]
   },
   {
@@ -1430,7 +1461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foo('p1_kykar') if CHECK_DECK_RECOMMENDATIONS else None"
+    "foo('p0_kykar') if CHECK_DECK_RECOMMENDATIONS else None"
    ]
   },
   {
@@ -1439,7 +1470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foo('p1_infinite_purphoros') if CHECK_DECK_RECOMMENDATIONS else None"
+    "foo('p0_infinite_purphoros') if CHECK_DECK_RECOMMENDATIONS else None"
    ]
   },
   {
@@ -1448,7 +1479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foo('p1_rogues') if CHECK_DECK_RECOMMENDATIONS else None"
+    "foo('p0_rogues') if CHECK_DECK_RECOMMENDATIONS else None"
    ]
   },
   {
@@ -1459,7 +1490,7 @@
    },
    "outputs": [],
    "source": [
-    "foo('p1_tokens') if CHECK_DECK_RECOMMENDATIONS else None"
+    "foo('p0_tokens') if CHECK_DECK_RECOMMENDATIONS else None"
    ]
   },
   {
@@ -1473,7 +1504,7 @@
     "\n",
     "def defining_cards(n=5):\n",
     "    top_n_candidates = {deck_col: set(z\n",
-    "                                      .sort_values(by=f\"p0_{deck_col}\", ascending=False)\n",
+    "                                      .sort_values(by=f\"p0_{deck_col}\", ascending=True)\n",
     "                                      .head(n)\n",
     "                                      .index\n",
     "                                      .values)\n",
@@ -1494,7 +1525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "defining_cards(100)"
+    "defining_cards(25)"
    ]
   },
   {
@@ -1998,7 +2029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
