[language modelling] data collation is actually essential to this task

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -30,6 +30,7 @@
     "from transformers import (BertConfig,\n",
     "                          BertForPreTraining,\n",
     "                          BertTokenizerFast,\n",
+    "                          DataCollatorForLanguageModeling,\n",
     "                          EarlyStoppingCallback,\n",
     "                          Trainer,\n",
     "                          TrainingArguments,\n",
@@ -50,15 +51,16 @@
     "MAKE_MLM_NSP_DATASET = False\n",
     "DO_CHUNKED_DATASET_BUILDING = False\n",
     "SAVE_DATASET_TO_FILE = False\n",
-    "LOAD_DATASET_FROM_FILE = True\n",
-    "DO_PRE_TRAINING = True\n",
+    "LOAD_DATASET_FROM_FILE = False\n",
+    "DO_PRE_TRAINING = False\n",
     "DO_SMALL_PRETRAIN_TEST = False\n",
+    "CHECK_PRETRAINED_MODEL_RESULTS = False\n",
     "\n",
     "# whether or not we cap the number of card pairs, or we choose or use\n",
     "# all possible pairs\n",
     "# NUM_MAX_PAIRS = None\n",
-    "NUM_MAX_PAIRS = 500\n",
-    "# NUM_MAX_PAIRS = 1"
+    "# NUM_MAX_PAIRS = 500\n",
+    "NUM_MAX_PAIRS = 1"
    ]
   },
   {
@@ -678,7 +680,8 @@
    "outputs": [],
    "source": [
     "if LOAD_DATASET_FROM_FILE:\n",
-    "    dataset = datasets.load_from_disk('mtg-mlm-nsp-dataset')"
+    "    f = 'mtg-mlm-nsp-dataset-small' if DO_SMALL_PRETRAIN_TEST else 'mtg-mlm-nsp-dataset'\n",
+    "    dataset = datasets.load_from_disk(f)"
    ]
   },
   {
@@ -783,6 +786,7 @@
     "if DO_PRE_TRAINING:\n",
     "    config = BertConfig(vocab_size=VOCAB_SIZE)\n",
     "    model = BertForPreTraining(config=config)\n",
+    "    tokenizer = BertTokenizerFast.from_pretrained(MODEL_NAME)\n",
     "    print(f'number of params in model: {model.num_parameters():,}')"
    ]
   },
@@ -799,6 +803,7 @@
     "        LOGGING_STEPS = 250\n",
     "        train_dataset = dataset['train'].select(range(80))\n",
     "        eval_dataset = dataset['validation'].select(range(80))\n",
+    "        output_dir = './mtg-language-results-v1-small'\n",
     "    else:\n",
     "        TRAIN_BATCH = 51\n",
     "        EVAL_BATCH = 186\n",
@@ -817,9 +822,8 @@
     "        \n",
     "        assert eval_dataset.num_rows % EVAL_BATCH == 0\n",
     "        print(eval_dataset.num_rows)\n",
+    "        output_dir = './mtg-language-results-v1'\n",
     "\n",
-    "    output_dir = './mtg-language-results-v1'\n",
-    "    \n",
     "    # # use this format to pick up from an aborted run\n",
     "    # model = BertForPreTraining.from_pretrained(f'./{output_dir}/checkpoint-5750')\n",
     "    \n",
@@ -828,6 +832,11 @@
     "    # kill the job\n",
     "    esc = EarlyStoppingCallback(early_stopping_patience=8,\n",
     "                                early_stopping_threshold=0.0)\n",
+    "    \n",
+    "    # this is responsible for adding the `labels`feature that we actually train on\n",
+    "    data_collator = DataCollatorForLanguageModeling(tokenizer=tokenizer,\n",
+    "                                                    mlm=True,\n",
+    "                                                    mlm_probability=0.15)\n",
     "\n",
     "    training_args = TrainingArguments(\n",
     "        output_dir=output_dir,                    # output directory\n",
@@ -845,7 +854,7 @@
     "        seed=1337,\n",
     "        dataloader_drop_last=True,\n",
     "        dataloader_num_workers=30,\n",
-    "        label_names=['labels', 'next_sentence_label'],\n",
+    "        #label_names=['labels', 'next_sentence_label'],\n",
     "        load_best_model_at_end=True,\n",
     "        save_total_limit=10,\n",
     "    )\n",
@@ -856,6 +865,8 @@
     "        train_dataset=train_dataset,  # training dataset\n",
     "        eval_dataset=eval_dataset,    # evaluation dataset\n",
     "        callbacks=[esc],\n",
+    "        tokenizer=tokenizer,\n",
+    "        data_collator=data_collator\n",
     "    )"
    ]
   },
