[language modelling] some other cleanups

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -785,8 +785,13 @@
    "source": [
     "if DO_PRE_TRAINING:\n",
     "    config = BertConfig(vocab_size=VOCAB_SIZE)\n",
+    "\n",
     "    model = BertForPreTraining(config=config)\n",
+    "    # # use this format to pick up from an aborted run\n",
+    "    # model = BertForPreTraining.from_pretrained(f'./{output_dir}/checkpoint-5750')\n",
+    "    \n",
     "    tokenizer = BertTokenizerFast.from_pretrained(MODEL_NAME)\n",
+    "    \n",
     "    print(f'number of params in model: {model.num_parameters():,}')"
    ]
   },
@@ -823,9 +828,6 @@
     "        assert eval_dataset.num_rows % EVAL_BATCH == 0\n",
     "        print(eval_dataset.num_rows)\n",
     "        output_dir = './mtg-language-results-v1'\n",
-    "\n",
-    "    # # use this format to pick up from an aborted run\n",
-    "    # model = BertForPreTraining.from_pretrained(f'./{output_dir}/checkpoint-5750')\n",
     "    \n",
     "    # this callback just says that if there are 8 consecutive (measured every\n",
     "    # eval_steps = ogging_steps steps) eval losses greater than the one at t0,\n",
@@ -908,21 +910,10 @@
    "outputs": [],
    "source": [
     "if DO_PRE_TRAINING:\n",
-    "    evals = {}\n",
-    "    for split in ['test', 'validation']:\n",
-    "        evals[split] = trainer.evaluate(dataset[split])\n",
+    "    evals = {split: trainer.evaluate(dataset[split])\n",
+    "             for split in ['test', 'validation']}\n",
     "\n",
     "evals if DO_PRE_TRAINING else None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if DO_PRE_TRAINING and not DO_CHUNKED_DATASET_BUILDING:\n",
-    "    tokenizer = BertTokenizerFast.from_pretrained(MODEL_NAME)"
    ]
   },
   {
@@ -991,7 +982,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
