[language modelling] labelling happens in the collator now

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -528,16 +528,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_labels(examples):\n",
-    "    return {'labels': examples['input_ids']}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def make_chunked_dataset_shell_cmd(n_chunks, c, num_max_pairs, max_seq_length):\n",
     "    nmp_flag = f' -m {num_max_pairs}' if num_max_pairs is not None else ''\n",
     "    return (f'python edhrec_dataset_chunk_proc.py'\n",
@@ -610,8 +600,7 @@
     "        base_dataset = (datasets.load_dataset('edhrec_dataset.py',\n",
     "                                              data_dir=DATA_DIR,\n",
     "                                              num_max_pairs=NUM_MAX_PAIRS)\n",
-    "                        .map(tokenizer_map_func, batched=False, num_proc=N_PROCS)\n",
-    "                        .map(add_labels, batched=True, num_proc=N_PROCS))\n",
+    "                        .map(tokenizer_map_func, batched=False, num_proc=N_PROCS))\n",
     "\n",
     "    dataset = (base_dataset\n",
     "               .shuffle(seeds={split: SEED for split in SPLITS}))"
