[language modelling]: working v1 again

--- a/bert-edh-pair-prediction/mtg-language-model.ipynb
+++ b/bert-edh-pair-prediction/mtg-language-model.ipynb
@@ -696,7 +696,7 @@
     "\n",
     "(pd.DataFrame({k: z[k]\n",
     "               for k in ['name_a', 'name_b', 'next_sentence_label', 'rec_set_type']})\n",
-    " if LOAD_DATASET_FROM FILE\n",
+    " if LOAD_DATASET_FROM_FILE\n",
     " else None)"
    ]
   },
@@ -795,13 +795,17 @@
     "        TRAIN_BATCH = 8\n",
     "        EVAL_BATCH = 8\n",
     "        LOGGING_STEPS = 250\n",
+    "        EARLY_STOPPING_PATIENCE = 8\n",
     "        train_dataset = dataset['train'].select(range(80))\n",
     "        eval_dataset = dataset['validation'].select(range(80))\n",
     "        output_dir = './mtg-language-results-v1-small'\n",
     "    else:\n",
     "        TRAIN_BATCH = 51\n",
     "        EVAL_BATCH = 186\n",
-    "        LOGGING_STEPS = 50\n",
+    "        #LOGGING_STEPS = 50\n",
+    "        #EARLY_STOPPING_PATIENCE = 8\n",
+    "        LOGGING_STEPS = 100\n",
+    "        EARLY_STOPPING_PATIENCE = 5\n",
     "        train_dataset = dataset['train']\n",
     "        #eval_dataset = dataset['validation']\n",
     "        \n",
@@ -821,7 +825,7 @@
     "    # this callback just says that if there are 8 consecutive (measured every\n",
     "    # eval_steps = ogging_steps steps) eval losses greater than the one at t0,\n",
     "    # kill the job\n",
-    "    esc = EarlyStoppingCallback(early_stopping_patience=8,\n",
+    "    esc = EarlyStoppingCallback(early_stopping_patience=EARLY_STOPPING_PATIENCE,\n",
     "                                early_stopping_threshold=0.0)\n",
     "    \n",
     "    # this is responsible for adding the `labels`feature that we actually train on\n",
@@ -971,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
